@@ -1,3 +1,8 @@
+2004-12-01 Bart Hakvoort  <gparted@users.sf.net>
+
+	* src/Dialog_Partition_New.cc,
+	  src/Frame_Resizer_Base.cc: Fixed a crasher with the New Partition Dialog (thanks to Tino for reporting)
+
 2004-11-30 Bart Hakvoort  <gparted@users.sf.net>
 
 	* src/fat16.cc,
